--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "704e7fbd",
+   "id": "11c41f29",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "274e23a2",
+   "id": "d999b574",
    "metadata": {},
    "source": [
     "### Q2: 各行(row)的比率相加是否確實等於升學率？"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "8a5e046b",
+   "id": "9e901eeb",
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "217408b2",
+   "id": "c6e3ed79",
    "metadata": {},
    "source": [
     "### Q3: 各學程別、設立別、性別的升學率分別是多少？"
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "5e2f7bc6",
+   "id": "ba77699b",
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "7667dced",
+   "id": "96665e22",
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "8a000bfe",
+   "id": "5901b5dd",
    "metadata": {},
    "outputs": [
     {
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1649ed50",
+   "id": "6226d292",
    "metadata": {},
    "source": [
     "### Q5: 哪種畢業生最願意讀此大專學制？（哪種畢業生的比率最高）"
@@ -1357,7 +1357,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "d78abdaf",
+   "id": "98e8ec0f",
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba1f2da6",
+   "id": "cbfacf59",
    "metadata": {},
    "source": [
     "### Q6: 高中設立別與大專院校設立別的關係"
@@ -1527,8 +1527,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
-   "id": "8a41d6f9",
+   "execution_count": 193,
+   "id": "d339c920",
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1552,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>總人數</th>\n",
+       "      <th>畢業生人數</th>\n",
        "      <th>公立大專比率</th>\n",
        "      <th>私立大專比率</th>\n",
        "    </tr>\n",
@@ -1567,34 +1567,34 @@
        "    <tr>\n",
        "      <th>國立高中</th>\n",
        "      <td>52092</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>私立高中</th>\n",
        "      <td>76492</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.59</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>縣市立高中</th>\n",
        "      <td>63325</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.51</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         總人數  公立大專比率  私立大專比率\n",
+       "       畢業生人數  公立大專比率  私立大專比率\n",
        "設立別                         \n",
-       "國立高中   52092     NaN     NaN\n",
-       "私立高中   76492     NaN     NaN\n",
-       "縣市立高中  63325     NaN     NaN"
+       "國立高中   52092    0.42    0.44\n",
+       "私立高中   76492    0.17    0.59\n",
+       "縣市立高中  63325    0.42    0.51"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1603,17 +1603,17 @@
     "group_res = df_109_num.groupby('設立別').sum()\n",
     "res = pd.DataFrame({'公立大專人數':group_res.filter(regex='公立').sum(axis=1),'私立大專人數':group_res.filter(regex='私立').sum(axis=1)})\n",
     "\n",
-    "res.insert(0, '總人數', group_res['畢業生人數'])\n",
+    "res.insert(0, '畢業生人數', group_res['畢業生人數'])\n",
     "res.index += '高中'\n",
     "res['公立大專比率'] = round(res['公立大專人數'] / res['畢業生人數'], 2)\n",
-    "res['私立大專比率'] = round(res['私立大專人數'] / group_res['畢業生人數'], 2)\n",
+    "res['私立大專比率'] = round(res['私立大專人數'] / res['畢業生人數'], 2)\n",
     "res = res.drop(columns=['公立大專人數', '私立大專人數'])\n",
     "res"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "719a142d",
+   "id": "5ed02357",
    "metadata": {},
    "source": [
     "### Q7: 各大專學制學生來源分佈"
@@ -1621,7 +1621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5bb71c7",
+   "id": "46b93ab0",
    "metadata": {},
    "source": [
     "#### 依學程別"
@@ -1630,7 +1630,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "fd023406",
+   "id": "84f41a17",
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b4ef08a",
+   "id": "20b9e525",
    "metadata": {},
    "source": [
     "#### 伊設立別"
@@ -1831,7 +1831,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "62d13621",
+   "id": "5acee315",
    "metadata": {},
    "outputs": [
     {
@@ -1995,7 +1995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e3a7cc0",
+   "id": "e4286ecb",
    "metadata": {},
    "source": [
     "#### 依性別（同Q4）"
@@ -2004,7 +2004,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "4b5b0924",
+   "id": "c8aaed96",
    "metadata": {},
    "outputs": [
     {
@@ -2155,7 +2155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4d99692",
+   "id": "645b508c",
    "metadata": {},
    "outputs": [],
    "source": []
