--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 1,
    "id": "db796410",
    "metadata": {
     "scrolled": true
@@ -399,7 +399,7 @@
        "[10 rows x 28 columns]"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 2,
    "id": "eebd82b5",
    "metadata": {
     "scrolled": true
@@ -497,7 +497,7 @@
        "進修部      8752"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 3,
    "id": "3188f89d",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
        "縣市立  63325"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 4,
    "id": "0c047681",
    "metadata": {},
    "outputs": [
@@ -630,7 +630,7 @@
        "男   99628"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 5,
    "id": "d894fdc5",
    "metadata": {},
    "outputs": [
@@ -930,7 +930,7 @@
        "           女   26.86  26.86 -3.552714e-15"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 6,
    "id": "b69fd96e",
    "metadata": {},
    "outputs": [
@@ -1034,7 +1034,7 @@
        "進修部      8752   252507.0  28.85"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 7,
    "id": "c76116a9",
    "metadata": {},
    "outputs": [
@@ -1117,7 +1117,7 @@
        "私立   76492  5916555.0  77.35"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 8,
    "id": "d2fc0691",
    "metadata": {},
    "outputs": [
@@ -1191,7 +1191,7 @@
        "男   99628  8322813.0  83.54"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 9,
    "id": "1774dd59",
    "metadata": {},
    "outputs": [
@@ -1335,7 +1335,7 @@
        "其他學校人數            119  0.65"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 10,
    "id": "feeb1211",
    "metadata": {},
    "outputs": [
@@ -1500,7 +1500,7 @@
        "其他學校比率          1.65      (進修部, 國立, 女)      34.71  0.05"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1527,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 11,
    "id": "d5aed356",
    "metadata": {},
    "outputs": [
@@ -1594,7 +1594,7 @@
        "縣市立高中  63325    0.42    0.51"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1616,13 +1616,204 @@
    "id": "716b4abc",
    "metadata": {},
    "source": [
-    "### Q7: 不同性別的高中生選擇日間/進修部大專的比率"
+    "### Q7: 不同學程別、設立別、性別的高中生選擇日間/進修部大專的比率"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 12,
    "id": "39cd82da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>畢業生人數</th>\n",
+       "      <th>日間部比率</th>\n",
+       "      <th>進修部比率</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學程別</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>實用技能學程</th>\n",
+       "      <td>7905</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>專業群科</th>\n",
+       "      <td>75588</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>0.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>普通科</th>\n",
+       "      <td>90401</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>綜合高中</th>\n",
+       "      <td>9263</td>\n",
+       "      <td>0.87</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>進修部</th>\n",
+       "      <td>8752</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        畢業生人數  日間部比率  進修部比率\n",
+       "學程別                        \n",
+       "實用技能學程   7905   0.38   0.14\n",
+       "專業群科    75588   0.73   0.08\n",
+       "普通科     90401   0.93   0.01\n",
+       "綜合高中     9263   0.87   0.04\n",
+       "進修部      8752   0.11   0.18"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 學程別\n",
+    "group_res = df_109_num.groupby('學程別').sum()\n",
+    "res = pd.DataFrame({'畢業生人數': group_res['畢業生人數'],\n",
+    "                    '日間部':group_res.filter(regex='日間').sum(axis=1), \n",
+    "                    '進修部':group_res.filter(regex='進修').sum(axis=1)})\n",
+    "\n",
+    "res['日間部比率'] = round( res['日間部'] / res['畢業生人數'], 2)\n",
+    "res['進修部比率'] = round( res['進修部'] / res['畢業生人數'], 2)\n",
+    "res = res.drop(columns=['日間部', '進修部'])\n",
+    "\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ba77c4d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>畢業生人數</th>\n",
+       "      <th>日間部比率</th>\n",
+       "      <th>進修部比率</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>設立別</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>國立</th>\n",
+       "      <td>52092</td>\n",
+       "      <td>0.82</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>私立</th>\n",
+       "      <td>76492</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>0.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>縣市立</th>\n",
+       "      <td>63325</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     畢業生人數  日間部比率  進修部比率\n",
+       "設立別                     \n",
+       "國立   52092   0.82   0.04\n",
+       "私立   76492   0.67   0.09\n",
+       "縣市立  63325   0.91   0.03"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 設立別\n",
+    "\n",
+    "group_res = df_109_num.groupby('設立別').sum()\n",
+    "res = pd.DataFrame({'畢業生人數': group_res['畢業生人數'],\n",
+    "                    '日間部':group_res.filter(regex='日間').sum(axis=1), \n",
+    "                    '進修部':group_res.filter(regex='進修').sum(axis=1)})\n",
+    "\n",
+    "res['日間部比率'] = round( res['日間部'] / res['畢業生人數'], 2)\n",
+    "res['進修部比率'] = round( res['進修部'] / res['畢業生人數'], 2)\n",
+    "res = res.drop(columns=['日間部', '進修部'])\n",
+    "\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7350b1f2",
    "metadata": {},
    "outputs": [
     {
@@ -1681,12 +1872,14 @@
        "男   99628   0.75   0.06"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 性別\n",
+    "\n",
     "group_res = df_109_num.groupby('性別').sum()\n",
     "res = pd.DataFrame({'畢業生人數': group_res['畢業生人數'],\n",
     "                    '日間部':group_res.filter(regex='日間').sum(axis=1), \n",
@@ -1717,7 +1910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 15,
    "id": "431ed351",
    "metadata": {},
    "outputs": [
@@ -1889,7 +2082,7 @@
        "其他學校           119      0.01    0.60   0.15    0.02   0.23"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1913,12 +2106,12 @@
    "id": "7b0fb897",
    "metadata": {},
    "source": [
-    "#### 伊設立別"
+    "#### 依設立別"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 16,
    "id": "04b193bc",
    "metadata": {},
    "outputs": [
@@ -2062,7 +2255,7 @@
        "其他學校           119    0.24    0.69     0.07"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2091,7 +2284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 17,
    "id": "37c4b980",
    "metadata": {
     "scrolled": true
@@ -2223,7 +2416,7 @@
        "其他學校           119  0.65  0.35"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
